fixed layout problem

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -24,7 +24,7 @@ html, body {
 
 #App {
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 }
 
 hr {
